--- a/https:/github.com/mazi1000/index.html
+++ b/https:/github.com/mazi1000/index.html
@@ -1,2 +1,20 @@
-# mazi1000.github.io
-Project- website 
+<!doctype html>
+<html>
+<head>
+    <title>Mazi's Parsha challange blog </title>
+    <meta charset="utf-8">
+</head>
+<body>
+    <style> 
+   h1 { 
+        font-family: serif;
+       } 
+    <h1>Parsha challange</h1>
+
+    <h3>My Challenge for this week </h3>
+    <ul>
+        <li> Wash neggle vasser in the morning 
+    </ul>
+
+</body>
+</html>
